public/css/style.css
html {
  height: 100%;
}
body {
  padding-top: 220px;
  /*background: #bbb;*/
  
  height: 100%;
}
#working-present-list {
  cursor: ns-resize;
}
.navbar-right {
  padding-right: 20px;
}
.red-background {
  background: #f00;
}
.green-background {
  background: #0f0;
}
/*#introModal { display:block;}*/

.blockModal {
  display: block;
}
.navbar-inverse {
  background: #e0ffff;
  border-bottom: 5px red dashed;
  /*height: 10%;*/
}
.navbar-inverse .navbar-text {
  color: #ff0000;
}
.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
  color: #fff;
  background-color: #ff0000;
}
.navbar-inverse .navbar-nav>li>a {
  color: #ff0000;
}
.navbar-inverse .navbar-nav>li>a:hover {
  color: #000;
}

.navbar-nav>li {
  font-weight: 800;
}

.navbar-nav>p {
  font-weight:800;
}

/*.navbar-nav {
  height:100%;
}

.navbar-nav li {
    line-height: 100%;
    height: 100%;
    padding-top: 0;
}

.navbar-nav li a {
    line-height: 100%;
    height: 100%;
    padding-top: 0;
}*/



.main-image {
  -webkit-filter: drop-shadow(0px 5px 20px #222);
  filter: drop-shadow(0px 5px 20px #222);
  width: 200px;
  padding: 10px;
  position: absolute;
  top:0px;
  
  margin: 0px 0 0 -100px;
  left: 50%;
}
.listmas-nav {
  width: 100%;
  height: 10%;
  background: #e0ffff;
  border-bottom: 5px red dashed;
  position: absolute;
  top: 0px;
}

.left-stuff {
  background: gray;
  width: 30%;
  height: 80%;
  padding: 10px;
  position: absolute;
  top:10%;
  /*Centering Method 2*/
  
  margin: 0px 0 0 -15%;
  left: 20%;

  text-align:right;
}

.right-stuff {
  background: gray;
  width: 30%;
  height: 80%;
  padding: 10px;
  position: absolute;
  top:10%;
  /*Centering Method 2*/
  
  margin: 0px 0 0 -15%;
  left: 80%;

  text-align:left;
}

hr.candy-cane {
  border-top:5px red dashed;
}

.list-group-item {
  margin: 10px 0;
  background:#d6ffe6;
}

.published-present {
  background: #bbb;
}

footer {
  background:#f00;
  width:100%;
  height: 2em;
}

.push {
  height:2em;
}

footer * {
  color:white;
}

.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin:0 auto -2em;
}

